Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -548,9 +548,9 @@
  ABANDONSTATE_CAPITAL:1 "我々の首都があるステートを放棄することはできません。\n"
  ABANDONSTATE_MAKE:0 "$NAME$は§Yステート§!です。\n（クリックするとテリトリーに変換されます）"
  STATE_IRO:0 "$NAME$は§Yステート§!です。"
- STATE_DRO:1 "A realm is divided into several territories, where all provinces owned in an area make up one territory. A territory can be made into a state of the nation, which is an integral part of the realm. This will cost some maintenance depending on the distance from the capital, while reducing its minimum autonomy dramatically.\n\nDevelopment in states and territories use up governing capacity. Territories development only counts as using 25% governing capacity. The governing capacity can be increased by increasing government rank, advancing administrative technology and completing the Administrative Ideas group."
+ STATE_DRO:1 "国土はいくつかのテリトリーに分かれており、ある地域に属するすべての州が一つのテリトリーとなります。テリトリーは、国土の不可欠な地域として、国家のステートにすることができます。 これにより、首都からの距離に応じて維持費が必要になりますが、自治率の最小値は大幅に低下します。 \n\nステートやテリトリーの開発には統治限界を消費します。テリトリーの開発は、25％の統治限界の使用としてのみ計算されます。統治限界は、政府ランクを上げ、統治技術を進歩させ、統治アイデアグループを完成させることによって増やすことができます。"
  CONFIRMAKESTATETITLE:0 "テリトリーをステートに変換"
- CONFIRMMAKESTATETEXT:1 "Making $NAME$ into a State will cost us $COST|Y$¤ in maintenance every month, while it will increase our income by about $INC|Y$¤ when autonomy has been reduced to lower levels. It will also increase our manpower and sailors from the area.\n\nTurning $NAME$ into a state will use $CAP|Y0$ out of our Governing Capacity bringing it up to a total of $USED_CAP|Y0$."
+ CONFIRMMAKESTATETEXT:1 "$NAME$をステートにすることで毎月の維持費は$COST|Y$¤になりますが、自治率が低いレベルに下がった場合には収入が約$INC|Y$¤増加します。また、その地域からの人的資源と水兵も増加します。\n\n$NAME$をステートにすると統治限界のうち$CAP|Y0$を使用し、合計$USED_CAP|Y0$になります。"
  CONFIRABANDONSTATEITLE:0 "ステートを放棄してテリトリーに戻す"
  CONFIRMABANDONSTATECORECOST:0 "このステートのすべての中核州はテリトリーの中核州となります。\n完全な中核州を再度作成するには、合計§R$COST$§!£adm£のコストがかかります。"
  STATES_INFO_TEXT:0 "$VAL|Y$ステート"
@@ -5017,8 +5017,8 @@
  alert_max_monarch_power_reached_2_delayed:0 "$POW1|Y$君主力と§Y$POW2$君主力§!が最大値に達しています。"
  alert_max_monarch_power_reached_3_delayed:0 "$POW1|Y$君主力、$POW2|Y$君主力と§Y$POW3$君主力§!が最大値に達しています。"
  AND_X_PROV_MORE:0 "And in $VAL|Y$ more provinces..."
- PAPAL_CURIA_TREASURY_NOT_ENOUGH:0 "§RYou need at least $COST|Y0$¤ Curia Treasury Available to take this action.§!"
- PAPAL_CURIA_TREASURY_COST:0 "Costs $COST|Y0$¤ from the Curia Treasury.\n"
+ PAPAL_CURIA_TREASURY_NOT_ENOUGH:0 "§Rこの行動を取るには少なくとも$COST|Y0$¤の教皇資金が必要です。§!"
+ PAPAL_CURIA_TREASURY_COST:0 "教皇資金から$COST|Y0$¤が必要です。\n"
  WHEN_CONQUERED:0 "\nこれはこの州を征服したときに中核化するのにかかるおおよそのコストです：\n"
  MODIFIER_GLOBAL_HEATHEN_MISSIONARY_STRENGTH:0 "異教に対する布教強度"
  MACRO_BATTLE_IN_PROGRESS:0 "$PROVINCE$で戦闘が進行中です。"
