--- a/source/localisation/core_l_english.yml
+++ b/source/localisation/core_l_english.yml
@@ -101,7 +101,7 @@
  INCOMEDTAX:0 "国勢調査税"
  INCOMEEXPORTDUTIES:0 "通行料金"
  INCOMEHARBORFEES:0 "港湾税"
- INCOMEMANUFAC:0 "工房"
+ INCOMEMANUFAC:0 "工場"
  INCOME_WAR_REPARATION:0 "戦争賠償金"
  EXPENSEAM:1 "陸軍維持費"
  EXPENSEFM:1 "艦隊維持費"
@@ -918,7 +918,7 @@
  UNIT_VIEW_CHOOSE_LEADER_MERCENARY_COMPANY:0 "これは傭兵団であり、彼らは自身で指揮官を決定します。"
  MAPMODE_SUPER_REGION_DESC:0 "所属する亜大陸に応じて州を色分けします。州をマウスオーバーすると、属する地域、地方、亜大陸が表示されます。"
  PLAYER_AI_PREFS_OPTION_TITLE_manage_estates:0 "階級を管理"
- PLAYER_AI_PREFS_OPTION_DESC_manage_estates:0 "Controls whether the AI may take any actions to manage your Estates"
+ PLAYER_AI_PREFS_OPTION_DESC_manage_estates:0 "AIがあなたの階級を管理するための何らかの行動をとるかどうかを制御する"
  ACHIEVEMENTS_DISABLED_ENDGAME_TAGS_BLOCKED:0 "§Y-「国家形成の制限」オプションが「はい」に設定されている必要があります。§!"
  SETTINGS_ACCESSIBILITY:0 "アクセシビリティ"
  SETTINGS_ACCESSIBILITY_TTS:0 "マルチプレイヤーのテキストチャットを読み上げる"
