--- a/source/localisation/cossacks_l_english.yml
+++ b/source/localisation/cossacks_l_english.yml
@@ -133,7 +133,7 @@
  ESTATE_LOYALTY_TOOLTIP_CHANGE:2 "\n忠誠度の月間変化は$CHANGE$です。"
  ESTATE_LOYALTY_TOOLTIP_CHANGE_YEARLY:0 "これは$BASE$の年間変化に相当します。"
  ESTATE_LOYALTY_TOOLTIP_TERRITORY:0 "彼らは領土を要求しているため、忠誠は毎月$MALUS$減少し、合計で$CHANGE$変化するでしょう。"
- ESTATE_LOYALTY_TOOLTIP_DELAYED:3 "An Estate's loyalty determines its country-wide effects. As long as it is at least $THRESHOLD|Y2&$ they will benefit you but if they drop below that threshold they will become disloyal and instead penalize you. The strength of these effects depends on their level of influence."
+ ESTATE_LOYALTY_TOOLTIP_DELAYED:3 "階級の忠誠は、彼らの国全体への影響力を決定します。彼らの忠誠が$THRESHOLD|Y2&$以上あるうちは、彼らは国家にとって有益です。一方この閾値を下回ると、彼らは不忠となり国家に不利益をもたらします。この効果の大きさは彼らの影響力のレベルに応じて変わります。"
  ESTATE_INFLUENCE_TOOLTIP_DELAYED:0 "階級の影響力は、彼らが国で握っている権力です。影響力のレベルが高いと、忠実な階級によってもたらされる利益と、不忠な階級によって被るペナルティの双方が増加します。影響力が$DANGER|Y$以上に増加した階級は、国家を掌握する危険性があります。"
  PROVINCE_GRANT_ESTATE_TOOLTIP_2:0 "州に以下の効果があるでしょう："
  PROVINCE_GRANT_ESTATE_TOOLTIP_3:0 "§R彼らの忠誠は$AMT|Y$を下回っているため、州に以下の効果があるでしょう：§!"
@@ -1055,7 +1055,7 @@
  tribal_estate_events.13.t:0 "独立した$ESTATE_NOMADIC_TRIBES$"
  tribal_estate_events.13.d:0 "我が国の強力な$ESTATE_NOMADIC_TRIBES$のいくつかの指導者が、[Root.Monarch.GetHerHis]の代表の不公平な干渉に不平を申し立てるため[Root.Monarch.GetTitle]に接触してきた。 $ESTATE_NOMADIC_TRIBES$は、彼らの古代の権利に従って、単独で独立した状態に置かれるべきであると感じている。"
  tribal_estate_events.13.a:0 "今後は、彼らを単独に置いておくべきだ。"
- tribal_estate_events.13.a.tt:1 "Provinces which make up the §YTribes§! Estate's land share will gain §R35§! Autonomy."
+ tribal_estate_events.13.a.tt:1 "§Y部族§!階級の土地占有率を構成する州は§R35§!の自治率を獲得します。"
  tribal_estate_events.13.b:0 "我々の国家内においてはその状態は一切容認できない！"
  tribal_estate_events.14.t:0 "$ESTATE_NOMADIC_TRIBES$の要求"
  tribal_estate_events.14.d:0 "$ESTATE_NOMADIC_TRIBES$は、彼らの将軍の才能が我々の軍によって無駄に使われていると感じており、指揮官に彼ら自身の軍を組織させるため故郷に戻すよう要求してきた。我々がほとんどの軍事的な問題を彼らに頼っているため、残った指導者にはかなりの負担がかかることになるだろう。"
@@ -1378,7 +1378,7 @@
  EST_VAL_PLUTOCRATIC_REFORM:0 "商業王国: §Y$VAL$§!"
  EST_VAL_PROVINCES:1 "支配された州: §Y$VAL$%§!（上限値§Y$REAL_VAL$%§!）"
  ESTATE_TERRITORY_TOOLTIP:1 "$ESTATE|Y$は$COUNTRY|Y$の開発度の$AMT|Y$を支配している。"
- ESTATE_LOYALTY_TOOLTIP_BASE:3 "The $ESTATE|Y$ loyalty is $LOYALTY_COLOR$$LOYALTY|&2$§! and will drift towards equilibrium every month by $CHANGE|+2&$."
+ ESTATE_LOYALTY_TOOLTIP_BASE:3 "$ESTATE|Y$の忠誠度は$LOYALTY_COLOR$$LOYALTY|&2$§!で、均衡値に向かって毎月$CHANGE|+2&$変移します。"
  ESTATE_INFLUENCE_TOOLTIP:2 "$ESTATE|Y$は以下の要因により$INFLUENCE$の影響力レベルを持っています："
  PROVINCE_GRANT_ESTATE_TOOLTIP:1 "$PROVINCE|Y$を$ESTATE|Y$に与える。"
  FE_USE_AGE_SCORING:0 "時代別スコアを有効にする"
@@ -1472,7 +1472,7 @@
  cossack_estate_events.2.d.fallback:0 "船や馬に乗り素早く移動することができるステップのコサックは非常に熟達した襲撃者である。そのような襲撃は最近、我々の国境から何らかの方法で行われ、我々の田舎や主要な都市さえも襲撃されて荒廃している。急襲を行うと、これらの略奪者は、すぐに、彼らがやってきた[cossacks_here_target.GetName]の国境の後ろに後退してしまう。被害地の地元当局は今我々に何かを行うよう求めている。"
  curtail_estate_dhimmi_title:0 "ズィンミーへの抑圧"
  curtail_estate_dhimmi_desc:0 "ズィンミーが我が政府を支配している。彼らから支配権を取り戻すため、彼らの権力と特権を縮小する必要がある。"
- EST_VAL_DEV:1 "Land Share: $VAL|Y1$§Y%§!"
+ EST_VAL_DEV:1 "土地占有率: $VAL|Y1$§Y%§!"
  ESTATE_LOYALTY_TOOLTIP_EQUILIBRIUM:0 "\n均衡値は現在$NEUTRAL|Y$§Y%§!で、以下の影響を受けます：\n$DESC$"
  JOIN_OFFENSIVE_WARS_TOGGLE_TITLE:0 "§Y攻撃戦争に参加§!\n"
  JOIN_OFFENSIVE_WARS_TOGGLE_BLOCK_TITLE:0 "§Y攻撃戦争に参加しない§!\n"
