--- a/source/localisation/emperor_content_l_english.yml
+++ b/source/localisation/emperor_content_l_english.yml
@@ -140,7 +140,7 @@
  borgia_diplomacy:0 "ボルジアの外交"
  desc_borgia_diplomacy:0 "ボルジア家についての卑劣な噂にもかかわらず、彼らの外交スキルは比類がなく、評判が敵によって貶められることを防いでいます。"
  flavor_pap.16.t:0 "ボルジア家の教皇"
- flavor_pap.16.d:0 "システィーナ礼拝堂の屋根から白い煙が立ち上る。シモニーの告発の中、コンクラーベはバレンシア大司教ロドリーゴ・ボルジアをサン・ピエトロの聖座に選出した。ボルジアはローマ政治の舞台に比較的最近登場した人物であり、自分たちのためにその地位を欲しがっていたローマの有力な一族の怒りを買っています。\n\nこのボルジア教皇を取り巻く噂の多くは、敵によって広められた誇張であると思われますが、彼は公然と愛人を持っていることで知られており、10代の息子チェーザレをすでに枢機卿に昇格させています。憶測では、この教皇の治世はスキャンダルと汚職に満ちたものになるだろうと言われています。"
+ flavor_pap.16.d:0 "システィーナ礼拝堂の屋根から白い煙が立ち上る。シモニーの告発の中、コンクラーベはバレンシア大司教ロドリーゴ・ボルジアをサン・ピエトロの聖座に選出した。ボルジアはローマ政治の舞台に比較的最近登場した人物であり、自分たちのためにその地位を欲しがっていたローマの有力な一族の怒りを買っている。\n\nこのボルジア家の教皇を取り巻く噂の多くは、敵によって広められた誇張であると思われるが、彼は公然と愛人を持っていることで知られており、10代の息子チェーザレをすでに枢機卿に昇格させている。憶測では、この教皇の治世はスキャンダルと汚職に満ちたものになるだろうと言われている。"
  flavor_pap.16.a:0 "教皇は生き残る。"
  flavor_pap.17.t:0 "チェーザレ・ボルジア"
  flavor_pap.17.d:0 "教皇の息子であるチェーザレ・ボルジアは、史上初めて枢機卿を辞任した男となった。その代わりに軍事冒険家としてのキャリアを求めていた彼は、有能で冷酷なコンドッティエロであることをすでに証明しています。ローマ法王は、チェーザレに教会の総大将としての役割を与え、教皇軍の支配権を与えることで、彼の能力を認めることを選んだ。"
@@ -1413,7 +1413,7 @@
  GRAND_CONSULESS_ELECTOR:0 "Grand Consuless-Elector"
  GREAT_CONSULESS_ELECTOR:0 "Great Consuless-Elector"
  flavor_kor.12.t:0 "農民層の窮状"
- flavor_kor.12.d:0 "Although Korea has experienced something of a golden age in recent years, this has not brought greater prosperity for the peasantry, who for the most part live in abject poverty. Already the first signs of discontent that could threaten Korea's stability can be seen. Steps will need to be taken to improve their lot if we are to avoid significant unrest."
+ flavor_kor.12.d:0 "朝鮮は近年、黄金期を迎えているが、大部分がひどい貧困の中で暮らす農民たちには、繁栄などもたらされてはいない。すでに朝鮮の安定を脅かす可能性のある不満の最初の兆候を見ることができる。大きな混乱を避けるためには、我々は、彼らの運命を改善するための措置を講じる必要があるだろう。"
  flavor_kor.12.A:0 "忌々しい農民どもめ..."
  flavor_kor.12.tt:0 "Complete the mission "§YThe Plight of the Peasantry§!" before the 1470s to avoid upheaval from peasant unrest."
  tooltip_global_trade_embraced_other_continent:0 "交易会社および領有国が§Y世界交易§!を受容していない - 海外州"
@@ -1470,7 +1470,7 @@
  two_neighbor_dev_15_provinces:0 "隣接する2つの開発度15の州を持っている"
  institution_events.22.a.tt:0 "[slaver_country.GetUsableName]が取引に同意した場合："
  opinion_imperial_diplomacy:0 "帝国の外交"
- TUR_is_rival_of_PREV:0 "Rivals [TUR.GetName]"
+ TUR_is_rival_of_PREV:0 "ライバルの[TUR.GetName]"
  joint_war_with_root_vs_france:0 "[FRA.GetName]に対する戦争で[Root.GetName]と共に戦っている"
  catholicism_string:0 "カトリック"
  anglicanism_string:0 "聖公会"
@@ -2665,7 +2665,7 @@
  custom_artillery_fire_desc:0 "黄金で作られた大砲に莫大な資金を費やすことは無駄だと言う人もいるが、これらの人々は単に無知なだけだ。大砲の製作に最高品質の金属のみを使用することで、世界は我々の砲身から轟く雷を恐れることだろう。"
  custom_coastal_combat:0 "水と一体に"
  custom_coastal_combat_desc:0 "荒波と海洋の台風は常に我々の敵にとって悪夢のように見えるが、我々自身の兵士たちにとっては大きな助けである。我々の水夫が文字通り水を自分の意のままに曲げているとさえ信じている人もいるが、そのような思いつきは明らかに馬鹿げている。"
- custom_manchu_ban:0 "Organizing the Banners"
+ custom_manchu_ban:0 "八旗の組織化"
  custom_manchu_ban_desc:0 "遊牧民の戦術は、国の防衛を打ち破るのに非常に有用だが、我々の騎手を組織化することにより、我々はるかに多くの数を集めることができるだろう。"
  custom_garrison_growth:0 "かがり火を灯せ"
  custom_garrison_growth_desc:0 "通常、平時には要塞は放棄されたままであり、戦時にそれらの要塞を強化するために兵士を集めるには数ヵ月かかることもある。我が国全体に一連のかがり火を設置することにより、我々の兵士たちは、地元の守備隊に報告することが彼らの義務であることをすぐに理解し、我が国の防衛を開始するだろう。"
@@ -2773,8 +2773,8 @@
  ICE_ideas_bonus:0 "アイスランドの宿願"
  ICE_althingi:0 "アルシング"
  ICE_althingi_desc:0 "アルシングは、祖先によって確立され、現在でも若い世代によって開催されている古くから崇拝された北欧の民主主義形態だ。法官は議会の議長職に就かなければならない。毎年議会に出席している者たちにアルシングの手続法を宣言することは彼の義務のため、彼の口から自国に施行されている法律を知ることになろうし、アイスランド人全員が彼の言葉に耳を傾け、尊重しよう。"
- ICE_hrafna_floki:0 "フローキ・ビリガルズソンの遺産"
- ICE_hrafna_floki_desc:0 "造船の真の王であるフローキ・ビリガルズソンは、木の中に船板を見ることができると言われていた。彼はアイスランドで出会った多くの旅行者や先住民にその技能を教え、世代を超えて彼の教えは受け継がれ、アイスランドの造船業者を比較できないほど洗練されたものにした。"
+ ICE_hrafna_floki:0 "カラスのフローキの遺産"
+ ICE_hrafna_floki_desc:0 "造船の真の王であるカラスのフローキは、木の中に船板を見ることができると言われていた。彼はアイスランドで出会った多くの旅行者や先住民にその技能を教え、世代を超えて彼の教えは受け継がれ、アイスランドの造船業者を比較できないほど洗練されたものにした。"
  ICE_christian_identity:0 "キリスト教徒の独自性"
  ICE_christian_identity_desc:0 "法の宣言者であるソルゲイルの瞑想と、1000年に行われた宣言以来、我々はずっとキリスト教国家である。今、ヨーロッパ全体に広がっている宗教改革と共に、我々は、我々が選択した道に関係なく、信心深いままである必要がある。"
  ICE_merchant_navy:0 "武装商船"
@@ -2855,7 +2855,7 @@
  VRM_Cheese_wheels_desc:0 "現地農家は、土地や海を渡る長い旅のためのチーズホイールの大量生産を始めた。どこに持って行っても垂涎の逸品の扱いを受け、最高のものだけを生産している。"
  VRM_Will_of_the_people:0 "人々の意志"
  VRM_Will_of_the_people_desc:0 "我々は海岸にやって来る人々との間の平和と繁栄しか望んでいないが、我々の自由を終わらせる意志を持ってアメリカ北東部の海岸に現れる者たちがいる。そのような動きは人々による強力な報復に遭うべきである。"
- VRM_Liberty_is_Life:0 "自由を与えよ、さもなくば死を"
+ VRM_Liberty_is_Life:0 "自由を与えよ、然らずんば死を"
  VRM_Liberty_is_Life_desc:0 "我が臣民は、安全を保証しているので利用しても常に忠実だ。彼らが成長するにつれ、自由を求める気持ちも高まるが、彼らを抑える方法がある。自由や権利の価値観を抱きかかえて生きることを拒否する者たちは、絶対にその者たちを生かしておいてはならない。"
  VRM_What_we_do_best:0 "最善を尽くせ"
  VRM_What_we_do_best_desc:0 "自国の交易商は誰よりも先に何が一番良いものかを知っている。極上の絹、極上の香辛料、極上の染料を持っている。なぜなら、それが普及している土地に賢明に投資し、それを国民のために自国へ送っているからだ"
