--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -1778,11 +1778,11 @@
  flavor_fra.EVTOPTA3781:1 "政変によって秩序がもたらされたのだ。"
  flavor_fra.EVTNAME3146:1 "ルイ16世の処刑"
  flavor_fra.EVTDESC3146:0 "1791年6月20日の国王一家の逃亡の失敗後、ルイ16世は軟禁状態に置かれた。恐怖政治が始まると、貴族は皆ギロチン台へ送られ、王は外国勢力と共謀した裏切り者であると宣告された。ルイ16世はまず退位を強制され、その後投獄され、「市民ルイ・カペー」と呼ばれるようになった。1793年1月15日、国民公会は王の処刑を投票にかけ、反対360票に対し賛成361票を獲得した。1793年1月21日、ルイ16世はギロチン台の露と消えた。"
- flavor_fra.EVTOPTA3146:0 "賛成票361、反対票361"
+ flavor_fra.EVTOPTA3146:0 "賛成票361、反対票360"
  flavor_fra.EVTOPTB3146:0 "反対票361、賛成票360"
  flavor_fra.EVTNAME3147:0 "シューアン蜂起"
  flavor_fra.EVTDESC3147:2 "Dissatisfaction at the course the Revolution has come to a head with the execution of the monarch. Many now regret overthrowing the old regime, which offered relative stability, if not liberty. Royalists in [first_province.GetName] and religious malcontents in [second_province.GetName] have united to launch a large-scale uprising against the current regime in a dastardly scheme to topple the Republic!"
- flavor_fra.EVTOPTA3147:1 "王党派と宗教勢力の反乱軍が反乱が活発に動いている。"
+ flavor_fra.EVTOPTA3147:1 "奴らをつぶさなければ。"
  flavor_fra.EVTNAME3148:1 "ナポレオン・ボナパルト"
  flavor_fra.EVTDESC3148:2 "The chaos of the Revolution and threats of foreign intervention have given ambitious young officers a chance to shine - a chance that has been seized in both hands by one Napoléon Bonaparte, a Corsican artillery lieutenant. His success in several engagements have brought him to prominence. Most recently, he single-handedly quashed a monarchist uprising in [Root.Capital.GetCapitalName] by deploying the heavy cannons on the city streets, the success of this decisive action earning him the adoration of the people. Already many leaders of the Revolution look favorably upon him and are pushing for him to be elevated to high office. However, he is a man of much ambition, one who may not be content to rule as a mere [Root.Monarch.GetTitle]."
  flavor_fra.EVTOPTA3148:1 "我々は卓越した指導者を必要としている！"
@@ -2609,7 +2609,7 @@
  flavor_bur.EVTDESC7:0 "ブルゴーニュの継承危機の間に我々が保有したある州は、神聖ローマ帝国の他の加盟国が請求している。彼らは、これらの州を回復することを要求している。"
  flavor_bur.EVTOPTA7:0 "彼らにこれらの土地を授ける。"
  flavor_bur.EVTOPTB7:0 "これらの土地は我々に属している。"
- flavor_bur.EVTNAME8:1 "The Lowlands Revolt!"
+ flavor_bur.EVTNAME8:1 "低地地方の反乱！"
  flavor_bur.EVTDESC8:1 "The [Root.GetAdjective] Low Countries have long felt that they are being ruled by an oppressive and foreign ruler. This discontent has now finally spilled over into open revolt. The people have renounced their oath to [Root.GetName] in order to fight for an independent Netherlands. We must prevent these accursed separatists from gaining a foothold, else they will seize the apparatus of the state and become a far more deadly foe."
  flavor_bur.EVTOPTA8:0 "反乱軍を抑えろ！"
  flavor_bur.EVTOPTB8:0 "地方に譲歩を与える。"
@@ -2670,7 +2670,7 @@
  flavor_mng.EVTOPTA6:0 "改革へ向かって進む！"
  flavor_mng.EVTOPTB6:0 "いや、改革には金がかかりすぎる。"
  flavor_mng.EVTNAME7:0 "イエズス会の到着"
- flavor_mng.EVTDESC7:0 "1581年、最初のイエズス会の宣教師が中国に到着し、皇帝に贈り物をもたらし、ヨーロッパからの様々な機械的発明を示した。彼らはまた、世界の巨大な地図を作成し、暦改革のための健全な考えを提案することによって、偉大な知識を披露した。しかし、彼らはまた、中国の伝統的な秩序を混乱させ始めた奇妙な宗教的、哲学的な思想を持ち込んでいる。これらの宣教師の滞在は許されるべきだろうか？"
+ flavor_mng.EVTDESC7:0 "1581年、最初のイエズス会の宣教師が中国に到着し、皇帝に贈り物をもたらし、ヨーロッパからの様々な機械的発明を示した。彼らはまた、世界の巨大な地図を作成し、暦改革のためのしっかりとしたアイデアを提案することによって、偉大な知識を披露した。しかし、彼らはまた、中国の伝統的な秩序を混乱させ始めた奇妙な宗教的、哲学的な思想を持ち込んでいる。これらの宣教師の滞在は許されるべきだろうか？"
  flavor_mng.EVTOPTA7:0 "うむ、我々はそれらの知識から恩恵を得ることができる。"
  flavor_mng.EVTOPTB7:0 "いや、その外国人の思想は我々の社会では受け入れられない。"
  flavor_mng.EVTNAME8:0 "飢饉だ！"
@@ -3412,7 +3412,7 @@
  flavor_pap.EVTOPTB7:0 "何もしない。"
  flavor_pap.EVTNAME8:0 "トリエント公会議"
  flavor_pap.EVTDESC8:1 "The Pope has invited us to attend the Council of Trent to debate the required reforms to remedy the corruption and other afflictions of the church. The Council will discuss what constitutes the Protestant heresy and consider the definition of Church teachings in the areas of Scripture and Tradition, Original Sin, Justification, Sacraments, the Eucharist in Holy Mass and the veneration of saints. It will also try to answer Protestant disputes by considering curbs on practices that have become a stain on the Church's reputation, for instance the frequent absenteeism of bishops and various worldly excesses of the clergy."
- flavor_pap.EVTOPTA8:1 "We must deliberate on our position."
+ flavor_pap.EVTOPTA8:1 "我々は自分の立場について慎重にならねばならぬ。"
  flavor_mch.EVTNAME1:0 "ヌルハチの改革"
  flavor_mch.EVTDESC1:0 "1584年、カーンであるヌルハチは、金・ツングースと呼ばれ、後に満州人と称された、全ツングース系部族を統一した。彼は中華を範として政府、行政、司法体系の改革も行った。ヌルハチは満州語の書記法の創案もした。"
  flavor_mch.EVTOPTA1:1 "満州の人々にとって偉大な日だ。"
@@ -3545,7 +3545,7 @@
  flavor_tus.15.a:1 "火の試練により彼を歩かせよう。"
  flavor_tus.15.b:0 "人々が再び神の命令に挑戦することはない！"
  flavor_tus.16.t:0 "サヴォナローラは世を去った"
- flavor_tus.16.d:1 "Even to his last, he promised that he would lead $COUNTRY$ as long as it needed God's guidance. With Savonarola's passing, the wave of fanaticism seems to have faded from [Root.GetName]."
+ flavor_tus.16.d:1 "彼は最後まで、神の指導を必要とする限り、$COUNTRY$を導くことを約束した。サヴォナローラが世を去るとともに、狂信の波は[Root.GetName]から消えたようだ。"
  flavor_tus.16.a:0 "共和国万歳！"
  flavor_tus.16.b:0 "[Root.Monarch.GetTitle]万歳！"
  flavor_sax.EVTNAME1:0 "ヨハン・ゼバスティアン・バッハ"
@@ -3555,7 +3555,7 @@
  flavor_han.EVTDESC1:0 "ゴットフリート・ヴィルヘルム・ライプニッツは、ドイツ人の哲学者、数学者であり、形而上学者と論理学者の両面で、重要な政治顧問であり、微積分学の独自の発明についても有名であった。1646年にライプツィヒで生まれ、最終的にはブラウンシュヴァイク・リューネブルク公であるヨハン・フリードリヒに仕えた。"
  flavor_han.EVTOPTA1:0 "OK"
  flavor_lit.EVTNAME1:0 "プロテスタントの波"
- flavor_lit.EVTDESC1:0 "In Lithuania people were mostly Catholic or Orthodox during the 15th and 16th century. However in the last two decades of the 16th century a lot of Protestant refugees from France, South Germany and Italy arrived. These cultural elite brought fresh ideas to the Duchy of Lithuania, pressed between her Catholic and Orthodox neighbors. The Radziwill family had strong power and had opened the country for influences from abroad. Cities were much more important than in the aristocratic system of Poland, and thus the people of the cities quickly became a cultural and religious melting-pot spreading Protestantism to the rural lands around them. When whole provinces slowly became Protestant, the king started to support the Protestant Faith. First personally and later as a State-religion looking to Prussia and Sweden as ideals. This also meant that Lithuania could take an independent stance between Russia and Poland. However, the many different religions in Lithuania made the government adhere to a very tolerant religious policy at least until the 1640s."
+ flavor_lit.EVTDESC1:0 "リトアニアでは、15世紀、16世紀にはカトリックや正教会の人々がほとんどであった。しかし、16世紀の最後の20年間で、フランス、南ドイツ、イタリアから多くのプロテスタント難民が到着した。これらの文化的エリートは、カトリックと正教の隣人の間で圧迫されていた、リトアニア公国に新鮮な思想をもたらした。ラジヴィウ家は強い力を持っており、海外からの影響力のために国家を開放した。都市はポーランドの宗教的な制度よりもはるかに重要であったため、都市の人々はすぐに彼らの周りの農村地帯にプロテスタントを広げる文化的かつ宗教的るつぼとなった。州全体が徐々にプロテスタントになるにつれて、王はプロテスタント信仰を支援し始めた。最初は個人的に、そしてその後はプロイセンやスウェーデンを理想とする国教としてであった。これはまた、リトアニアがロシアとポーランドの間で独立した姿勢をとることができることを意味した。しかし、リトアニアの多くの異なる宗教は、少なくとも1640年代までは、政府に非常に寛容な宗教政策を遵守させた。"
  flavor_lit.EVTOPTA1:0 "運動を受け入れる。"
  flavor_lit.EVTOPTB1:0 "運動をつぶせ。"
  flavor_lit.EVTNAME2:0 "カルヴァン主義の波"
@@ -4031,7 +4031,7 @@
  flavor_mng.24.d:0 "中国でのキリスト教の宣教師の継続的な存在は、効果がなかったわけではない。我々の州の一つにおいて、キリスト教宣教師の下にある住民の数は増加を続けており、現在ではキリスト教がその地域の支配的な宗教となった。"
  flavor_mng.24.a:0 "OK"
  flavor_mng.25.t:0 "キリスト教、皇帝のための信仰？"
- flavor_mng.25.d:0 "Christianity has become more and more accepted among our subjects and $MONARCHTITLE$ $MONARCH$ counts Christian missionaries among his closest confidants in the capital. Recently even our mother has converted to this foreign religion. Perhaps the time has come to convert to this Roman faith? Apart from the theological implications we would surely find many new friends among the kingdoms of the West."
+ flavor_mng.25.d:0 "我々の臣民の中でキリスト教がますます受け入れられ、$MONARCHTITLE$$MONARCH$はキリスト教徒の宣教師を首都における最も近い友とみなしている。最近、我らの母もこの外国の宗教に改宗した。おそらく、このローマの信仰に改宗する時が来たのだろうか？神学的な意味は別として、我々は西洋の王国の中で確実に多くの新しい友を見い出すだろう。"
  flavor_mng.25.a:0 "キリスト教を受け入れる。"
  flavor_mng.25.b:0 "それはありえない。"
  flavor_mng.26.t:0 "キリスト教の聖職者"
@@ -4062,7 +4062,7 @@
  flavor_inc.3.a:0 "価値ある首都を建設しよう！"
  flavor_inc.3.b:0 "我々の財源は、他のことのために使う方がよい。"
  flavor_inc.4.t:0 "クスコの再建の達成"
- flavor_inc.4.d:0 "After almost 20 years the great project of restructuring Cusco is complete. The land has been leveled to create huge plazas and beautiful buildings erected, the nearby rivers have been led into canals.\nThe city is built to be the capital of an Empire rather than a small kingdom and is organized into four regions matching the way which we divide our realm in the Andes. The royal center is located at the junction of the regions of Antisuyu, Qullasuyu, Kuntisuyu and Chinchaysuyu and these regions divide the Cusco valley as well as our empire."
+ flavor_inc.4.d:0 "約20年後、クスコの再建という素晴らしいプロジェクトが完成した。土地は巨大な広場と美しい建物を建てるために水平にされ、近くの川は運河に導かれている。\nこの都市は、小さな王国というよりは帝国の首都となるように建てられ、アンデスの国土を分ける道に沿うような4つの地区からなっている。王宮の中心は、アンティスユ、クラスユー、カンティスーユ、チンチャイユの地区の交差点に位置し、これらの地区はクスコの谷だけでなく帝国全体をも分けるものだった。"
  flavor_inc.4.a:0 "素晴らしい！"
  flavor_inc.5.t:0 "マチュピチュ"
  flavor_inc.5.d:0 "クスコ王国の大きな野望に合うようにクスコの街が再建される必要があったのと同じように、$MONARCH$は、彼の身柄と血筋の重要性に調和した威厳のある場所を必要としている。ウルバンバ川に完全に囲まれた山に、$MONARCH$はマチュピチュの町を計画している。マチュピチュは、彼の廷臣とパナカ（親族集団）のための王家の静養先であり、その中で住む高い地位の支配者たちにとっての美しい場所となった。"
@@ -4292,7 +4292,7 @@
  gua_bandeirantes:0 "バンデイランテス"
  desc_gua_bandeirantes:0 "バンデイランテスは、奴隷売買人、金持ちになろうとする人、そして冒険家である。彼らは、売るか、もしくは貴重な金属と宝石を探索する探検隊で強制労働させるために南アメリカの先住民族を奴隷にした。"
  flavor_gua.4.t:0 "イェルバ・マテ"
- flavor_gua.4.d:0 "We have known about the plant Yerba Mate for a long time, and drink the beverage mate made from it every day. We have survived periods of drought and famine by drinking it and we call it the 'Drink of the Gods'. Our legend says that the Goddesses of the Moon and the Cloud visited Earth one day when they were attacked by a Yaguarete - a jaguar. The Goddesses were saved by an old man, who told them that he had stayed behind when his tribe moved on to protect his young daughter and wife. He invited them to his hut and the next day when the Goddesses left, they discussed what they would give the old man and his family as compensation. They decided on a new kind of plant which they sowed and grew while the family slept. When the family woke up the Goddess of the Moon told them who she was and that they were given this plant as a gift for their goodness. The plant was to be the symbol of friendship and she taught them how to toast the yerba and to drink the mate. This is how the 'Drink of Friendship' came to be."
+ flavor_gua.4.d:0 "我々は長い間、イェルバ・マテという植物について知っており、毎日それから作られたマテ茶を飲んでいる。我々はそれを飲んで干ばつと飢饉の時を生き延び、それを「神の飲み物」と呼んでいる。我々の伝説によると、月と雲の女神たちはヤグアレテというジャガーに襲われた時に地上を訪れた。女神たちはある老人によって助けられた。彼は彼女たちに、彼の部族が彼の娘や妻を守りに向かった時に彼はあとに残っていたのだと話した。彼は彼女たちを小屋に招待した。翌日、女神たちが出て行く時、彼女たちは老人とその家族に報酬として与えるものについて話し合った。彼女たちは新しい種類の植物にすることに決め、そしてそれを家族が眠っている間に種をまき育てた。家族が目を覚ました時、月の女神は自らが何者なのか、また女神の贈り物としてこの植物が与えられたことを彼らに話した。この植物は友情の象徴とされ、女神はイェルバを火で温め、マテ茶として飲む方法を教えた。このようにして「友情の飲み物」が生まれたのだ。"
  flavor_gua.4.a:0 "イェルバ・マテとその伝説は、我々の支配の下では決して忘れられないだろう！"
  flavor_gua.4.b:0 "生産を増やし、それを輸出する！"
  gua_yerba_mate:0 "イェルバ・マテ"
@@ -4346,7 +4346,7 @@
  flavor_tlx.2.d:0 "トラウィコレと呼ばれる強力なトラスカルテカの戦士がアステカに捕らえられた！彼の悲運の知らせがたった今我々に届いた。アステカの支配者はトラウィコレの勇気と人柄に心打たれ、彼の解放を命じた。トラウィコレは、他の捕虜と同じ運命を歩むことを求めて、王の寛大さを断った。アステカ王は、タラスカを追い返すためにトラウィコレに軍の指揮を命じ、彼は来る戦場での名誉の戦死を願って引き受けた。彼は彼らの決死の抵抗にもかかわらず、タラスカ軍を倒し、戦利品と多くの捕虜をアステカに持ち帰った。アステカ王はトラウィコレを説得しようとしたが、彼は軍の司令長官としての地位もトラスカラに戻ることも受け入れなかった。前者は反逆になるという理由から、後者は彼の栄光の汚点となるという理由からであった。剣闘士の石で縛られ、戦いを通して神々に犠牲として捧げられるというトラウィコレの願いは遂に叶えられた。8人の戦士が次々とトラウィコレを攻撃したが、彼らはすべて敗北した。9番目の戦士は何とか彼を気絶させ、トラウィコレは儀式で処刑された。"
  flavor_tlx.2.a:0 "彼は歴史の中の伝説として記憶されるだろう。"
  flavor_aimara.1.t:0 "コパカッチラカ"
- flavor_aimara.1.d:0 "The Incas have arrived and we will not submit to them, worship their gods, nor serve them as slaves. Copacatiraca was one of many who wanted us to start this war but he has changed his mind after we have had many defeats by the Incas. He wishes to persuade the people to accept the Incas and Copacatiraca tells us that the Inca king is benevolent, the Inca's laws are good and their government gentle. If we were to submit and be conquered, he argues, we will not be seen as slaves but as brothers, and a peace with the Inca would be convenient."
+ flavor_aimara.1.d:0 "インカが到着したが、我々は彼らに服従したり、神々を崇拝したり、奴隷として仕えたりすることはないだろう。コパカッチラカは我々に戦争を始めるよう求めた多くの人々の1人だったが、我々がインカに数多く敗北した後、彼は心を入れ替えた。彼は人々にインカを受け入れるよう説得したいと願っている。コパカッチラカは、インカの王は慈悲深く、インカの法律は優しく、行政は優しいと伝えている。我々が服従して征服されるならば、我々は奴隷ではなく兄弟として見なされ、インカとの平和は好都合だろうと彼は論じている。"
  flavor_aimara.1.a:0 "いいや、我々はインカに服従しないだろう！"
  flavor_aimara.2.t:0 "チチカカ"
  flavor_aimara.2.d:0 "チチカカ湖にあるチチカカ島は、暗闇の日の後に太陽が出現した場所であるという伝説で知られている。島に住む人々は暗闇に非常にびっくりしたが、最終的に彼らは太陽がチチカカという神聖な岩から現れるのを見て、そこが太陽の住居であると認識した。大洪水中に太陽は岩の下に隠れ、チチカカは洪水が引き始めた時に最初に現れる土地だった。太陽が空を照らすためにチチカカから再度現れた。\nここに神殿を建て、巡礼者を連れて来て、1もしくは2コインを稼ぐのが賢明だろう。"
@@ -4407,7 +4407,7 @@
  desc_tupi_caramuru_trade:0 "我々は遭難したヨーロッパ人のカラムルを我々の部族に歓迎し、彼は故郷の植民地との接触を維持している。この関係は、直接的にも長期的な開発という意味でも我々の交易に利益をもたらす。"
  flavor_tupi.1.t:0 "侵略者バンデイランテス"
  flavor_tupi.1.d:0 "我々の国境に近い地域に住むヨーロッパの入植者の一部は、奴隷を得るために我々の村落を襲い始めた。トゥピ族の村人全員が拘束され、ヨーロッパ国家の植民地の砂糖農場に連れていかれた。当初は、我々が報復を要求するかもしれない事件として孤立するだろうと期待されていたが、今やこれらの襲撃が一部の地主によって組織的に利用されていることは明らかだ。私たちの部族の長老たちは、今行動しなければ、これは完全に制御できなくなるだろうと感じている。"
- flavor_tupi.1.a:1 "Let us summon the Tupi tribes and unite against the invaders!"
+ flavor_tupi.1.a:1 "トゥピ族を呼び出し、侵略者に対して団結しよう！"
  flavor_tupi.1.b:0 "我々は、自らを管理している外国人を信用しなければならない。"
  flavor_tupi.2.t:0 "タモヨ連合"
  flavor_tupi.2.d:1 "我々は、$FROMCOUNTRY$からの使者を受け取った。それは、彼らの土地に迷惑をかけるヨーロッパの奴隷売買人から国民を守るための防衛協定に参加するように促すものだった。我々自体にとってこの問題は多くを占めてはいないが、我々の部族の長老たちは、我々がこの時に一緒に共同しなければ、次々に敗北すると感じている。"
@@ -4610,10 +4610,10 @@
  flavor_daimyo.10.c:0 "火事と喧嘩は江戸の花だ。"
  flavor_daimyo.10.c.tt:0 "我々はまず城を元に戻し、町の残りの部分の復興には、できる限り費用は使わない。"
  flavor_daimyo.11.t:0 "南海津波"
- flavor_daimyo.11.d:0 "A gigantic wave has hit our southern coastline, washing away houses and destroying castles, temples and roads. The effects of this disaster are felt along the entire Nankaido area and will likely have great effects on the region for years to come. All that remains for us now is to restore and rebuild what was lost."
+ flavor_daimyo.11.d:0 "巨大な波が南の海岸を襲い、家を洗い流し、城、寺院、街道を破壊している。この災害の影響は、南海道地域全体で感じられ、今後数年間、地域に大きな影響を及ぼす可能性がある。我々に残されているのは、失われたものを回復して再建することだけである。"
  flavor_daimyo.11.a:0 "我々は死んでいった者たちを忘れない。"
  flavor_daimyo.12.t:0 "南海津波"
- flavor_daimyo.12.d:0 "A gigantic wave has hit our southern coastline, washing away houses and destroying castles, temples and roads. The effects of this disaster are felt along the entire Nankaido area and will likely have great effects on the region for years to come. All that remains for us now is to restore and rebuild what was lost."
+ flavor_daimyo.12.d:0 "巨大な波が南の海岸を襲い、家を洗い流し、城、寺院、街道を破壊している。この災害の影響は、南海道地域全体で感じられ、今後数年間、地域に大きな影響を及ぼす可能性がある。我々に残されているのは、失われたものを回復して再建することだけである。"
  flavor_daimyo.12.a:0 "我々は死んでいった者たちを忘れない。"
  flavor_daimyo.13.t:0 "富士山の宝永大噴火"
  flavor_daimyo.13.d:0 "2週間もの間、富士山周辺の空からは石や火山灰が降り続いている。火山の噴火がようやく終わっても、地方の農民や周辺の役人たちには、神聖な山の灰から畑や街道を再建する仕事が残されている。"
@@ -4696,7 +4696,7 @@
  flavor_dlh.6.a:0 "サイイド朝から出る時だ！"
  flavor_dlh.6.b:0 "ローディー族は依然忠実な臣民であろう。"
  flavor_dlh.7.t:0 "[Root.Monarch.GetName]の立身"
- flavor_dlh.7.d:0 "Recognizing the ambition and ability of our leader, [Root.Monarch.GetName] the sultans of Delhi have dropped all pretensions of being our overlord. Instead they have sent us a token of their appreciation and asked that we go forward as close friends in the hostile environment of Northern India."
+ flavor_dlh.7.d:0 "我が指導者[Root.Monarch.GetName]の野心と能力を認め、デリーのスルタンは我々の宗主であるという主張を全て捨てました。代わりに、彼らは我々に感謝の印を贈り、インド北部の敵対的環境において、親しい友人として進むことを求めています。"
  flavor_dlh.7.a:0 "この友情は長く続けられるだろうか？"
  flavor_dlh.EVTNAME8:0 "アグラの創立"
  flavor_dlh.EVTDESC8:0 "都市アグラは、この地域の都市開発政策のおかげで、ヤムナー川の堤防に建てられました。すでに人口と交易の主要な中心地であり、アグラへ遷都するという展望は魅力的です。"
@@ -4796,8 +4796,8 @@
  flavor_gra.3.b:0 "潰せ。"
  merino_wool_tooltip:0 "§Yイベリア§!地方に領有している§Y羊毛§!を生産する州は全て§Y貴族§!か§Y聖職者§!の支配下になります。"
  flavor_fra.EVTNAME9000:0 "物議を醸す詩人"
- flavor_fra.EVTDESC9000:0 "As is customary, we released a few prisoners to celebrate the crowning of [Root.Monarch.GetTitle] [Root.Monarch.GetName]. Among them was a young poet who thanked us by writing a ballad against the enemies of France. However, our bailiff informs us that he is still wanted in Paris for stealing money from the university and killing a priest in a brawl."
+ flavor_fra.EVTDESC9000:0 "慣例により、[Root.Monarch.GetTitle] [Root.Monarch.GetName] の戴冠による恩赦が実施され、囚人が釈放された。その中の若い詩人はフランスの敵を砕くバラッドを書き感謝を示すのだった。しかしながら廷吏によると、どうやら彼はいまだ窃盗と喧嘩による司祭殺害によりパリで指名手配されているらしい。"
  flavor_fra.EVTOPTA9000:0 "大罪だな。犯罪者を牢獄に連れ戻せ"
  flavor_fra.EVTOPTB9000:0 "気に入った。完全な赦免を与え宮廷に迎え入れよう"
  flavor_fra.EVTOPTC9000:0 "知ったことではない"
- can_join_council_of_trent_tt:0 "§Y[Root.GetName] may now choose a position on the Council of Trent§!"
+ can_join_council_of_trent_tt:0 "§Y[Root.GetName]は現在、トリエント公会議における姿勢を選択できます§!"
