--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -5571,11 +5571,11 @@
  SUCCESSIONWAR_SETUP:0 "他国が継承戦争を開始した時"
  SUCCESSIONWAR_HEADER:0 "$MESSENGER$"
  SUCCESSIONWAR_1:0 "$TARGET$継承戦争！"
- SUCCESSIONWAR_2:0 "$MONARCHTITLE$、$SECOND$は"
- SUCCESSIONWAR_3:0 "$FIRST$"
- SUCCESSIONWAR_4:0 "$NATION$の前代の王は、彼が死去したとき、王位は$FIRST$に渡されるべきであると宣言した。しかしながら、"
- SUCCESSIONWAR_5:0 "$SECOND$"
- SUCCESSIONWAR_6:1 "前代の王は心神喪失状態だったと主張し、$NATION$の王位は自身が継承すべきと主張しています。これは長く血生臭い闘争になりそうです。"
+ SUCCESSIONWAR_2:0 "$MONARCHTITLE$、$SECOND$は戦争に向かっています。"
+ SUCCESSIONWAR_3:0 "$FIRST$は"
+ SUCCESSIONWAR_4:0 "「前$NATION$王は、彼の死後$FIRST$が王位を継ぐべきとの意思をしめしていた」と主張。しかしながら、"
+ SUCCESSIONWAR_5:0 "$SECOND$は"
+ SUCCESSIONWAR_6:1 "「前王は心神喪失状態だった」と主張し、$NATION$の王位は自身が継承すべきと主張しています。これは血で血を洗う長き闘争になりそうです。"
  SUCCESSIONWAR_LOG:0 "$TARGET$継承戦争が$FIRST$と$SECOND$の間で開始されました。"
  SUCCESSIONWAR_BTN1:0 "OK"
  SUCCESSIONWAR_BTN2:0 "OK"
@@ -6984,7 +6984,7 @@
  BANKLOAN_4:0 "$ESTATE_INFO$"
  DECIMPERIALREALMWARWITHUS_TITLE:0 "皇帝が帝国戦争を要求"
  DECIMPERIALREALMWARWITHUS_SETUP:0 "When the Emperor calls for Reichskrieg against the Empires enemies."
- DECIMPERIALREALMWARWITHUS_HEADER:0 "Herald from"
+ DECIMPERIALREALMWARWITHUS_HEADER:0 "使者"
  DECIMPERIALREALMWARWITHUS_1:0 "$ACTOR$"
  DECIMPERIALREALMWARWITHUS_2:0 "in their power as Emperor have declared"
  DECIMPERIALREALMWARWITHUS_3:0 "a Reichskrieg against us"
@@ -6992,10 +6992,10 @@
  DECIMPERIALREALMWARWITHUS_LOG:0 "$ACTOR$は帝国戦争を宣言した！"
  DECIMPERIALREALMWARWITHUS_BTN1:0 "OK"
  DECIMPERIALREALMWARWITHUS_BTN2:0 "OK"
- DECIMPERIALREALMWARWITHUS_BTN3:0 "Go to"
+ DECIMPERIALREALMWARWITHUS_BTN3:0 "移動"
  DECIMPERIALREALMWARWITHOTHER_TITLE:0 "皇帝が帝国戦争を要求"
  DECIMPERIALREALMWARWITHOTHER_SETUP:0 "When the Emperor calls for Reichskrieg against the Empires enemies."
- DECIMPERIALREALMWARWITHOTHER_HEADER:0 "Herald from"
+ DECIMPERIALREALMWARWITHOTHER_HEADER:0 "使者"
  DECIMPERIALREALMWARWITHOTHER_1:0 "$ACTOR$"
  DECIMPERIALREALMWARWITHOTHER_2:0 "in their power as Emperor have declared"
  DECIMPERIALREALMWARWITHOTHER_3:0 "a Reichskrieg against $RECIPIENT$"
@@ -7005,11 +7005,11 @@
  DECIMPERIALREALMWARWITHOTHER_LOG:0 "$ACTOR$は$RECIPIENT$に対し帝国戦争を宣言した！"
  DECIMPERIALREALMWARWITHOTHER_BTN1:0 "OK"
  DECIMPERIALREALMWARWITHOTHER_BTN2:0 "OK"
- DECIMPERIALREALMWARWITHOTHER_BTN3:0 "Go to"
- REVOLUTION_SPREAD_TITLE:0 "Revolutionary Ideas Spread"
+ DECIMPERIALREALMWARWITHOTHER_BTN3:0 "移動"
+ REVOLUTION_SPREAD_TITLE:0 "革命思想の広がり"
  REVOLUTION_SPREAD_SETUP:0 "When revolutionary ideas spread to our provinces."
  REVOLUTION_SPREAD_HEADER:0 "$MESSENGER$"
- REVOLUTION_SPREAD_1:0 "Revolutionary Ideas Spread"
+ REVOLUTION_SPREAD_1:0 "革命思想の広がり"
  REVOLUTION_SPREAD_2:0 "$MONARCHTITLE$, the Center of Revolution in"
  REVOLUTION_SPREAD_3:0 "$REVCENTER$"
  REVOLUTION_SPREAD_4:0 "has spread Revolutionary Ideas to some of our provinces:"
@@ -7017,11 +7017,11 @@
  REVOLUTION_SPREAD_6:0 "$HINT$"
  REVOLUTION_SPREAD_LOG:0 "Revolutionary ideas have spread to our provinces."
  REVOLUTION_SPREAD_BTN2:0 "OK"
- REVOLUTION_SPREAD_BTN3:0 "Go to"
- REVOLUTION_SPREAD_ZEAL_TITLE:0 "Revolutionary Ideas Spread"
+ REVOLUTION_SPREAD_BTN3:0 "移動"
+ REVOLUTION_SPREAD_ZEAL_TITLE:0 "革命思想の広がり"
  REVOLUTION_SPREAD_ZEAL_SETUP:0 "When we spread revolutionary ideas to our ennemies."
  REVOLUTION_SPREAD_ZEAL_HEADER:0 "$MESSENGER$"
- REVOLUTION_SPREAD_ZEAL_1:0 "Revolutionary Ideas Spread"
+ REVOLUTION_SPREAD_ZEAL_1:0 "革命思想の広がり"
  REVOLUTION_SPREAD_ZEAL_2:0 "$MONARCHTITLE$, the Center of Revolution in"
  REVOLUTION_SPREAD_ZEAL_3:0 "$REVCENTER$"
  REVOLUTION_SPREAD_ZEAL_4:0 "has spread Revolutionary Ideas to ennemy provinces:"
@@ -7029,7 +7029,7 @@
  REVOLUTION_SPREAD_ZEAL_6:0 "We have have gained $ZEAL$ Revolutionary Zeal."
  REVOLUTION_SPREAD_ZEAL_LOG:0 "Revolutionary ideas have spread to ennemy' provinces."
  REVOLUTION_SPREAD_ZEAL_BTN2:0 "OK"
- REVOLUTION_SPREAD_ZEAL_BTN3:0 "Go to"
+ REVOLUTION_SPREAD_ZEAL_BTN3:0 "移動"
  WEGAINDOFTIER_TITLE:0 "Rise to higher Defender of the Faith Tier"
  WEGAINDOFTIER_SETUP:0 "我々が信仰の擁護者のより高いレベルに上がる時。"
  WEGAINDOFTIER_HEADER:0 "$MESSENGER$"
@@ -7039,7 +7039,7 @@
  WEGAINDOFTIER_LOG:0 "我々が信仰の擁護者のより高いレベルに上がった時。"
  WEGAINDOFTIER_BTN1:0 "OK"
  WEGAINDOFTIER_BTN2:0 "OK"
- WEGAINDOFTIER_BTN3:0 "Go to"
+ WEGAINDOFTIER_BTN3:0 "移動"
  WELOSEDOFTIER_TITLE:0 "Dropped out of Defender of the Faith Tier"
  WELOSEDOFTIER_SETUP:0 "我々の信仰の擁護者のレベルが下がる時。"
  WELOSEDOFTIER_HEADER:0 "$MESSENGER$"
@@ -7049,4 +7049,4 @@
  WELOSEDOFTIER_LOG:0 "我々の信仰の擁護者のレベルが下がった時。"
  WELOSEDOFTIER_BTN1:0 "OK"
  WELOSEDOFTIER_BTN2:0 "OK"
- WELOSEDOFTIER_BTN3:0 "Go to"
+ WELOSEDOFTIER_BTN3:0 "移動"
