--- a/source/localisation/triggers_and_effects_l_english.yml
+++ b/source/localisation/triggers_and_effects_l_english.yml
@@ -44,7 +44,7 @@
  INSTITUTION_ENABLED:0 "$WHICH|Y$が発見されている。\n"
  NOT_INSTITUTION_ORIGIN:0 "$WHICH|Y$の発祥地ではない。\n"
  INSTITUTION_ORIGIN:0 "$WHICH|Y$の発祥地である。"
- ADD_INSTITUTION_EMBRACEMENT_EFFECT:0 "$PROV$ $DIRECTION$ $VALUE$ support for $WHICH|Y$.\n"
+ ADD_INSTITUTION_EMBRACEMENT_EFFECT:0 "$PROV$は$WHICH|Y$への支持$VALUE$を$DIRECTION$。\n"
  HAS_MERCHANT_TRIGGER:1 "$WHO|Y$の商人が$WHERE|Y$にいる。\n"
  HAS_NOT_MERCHANT_TRIGGER:0 "$WHO|Y$の商人が$WHERE|Y$にいない。\n"
  HAS_NOT_DISASTER:0 "$NAME|Y$にない。\n"
@@ -644,8 +644,8 @@
  TRENT_IS_ENABLED:1 "トリエント公会議が開始された。"
  ENABLE_COUNCIL_OF_TRENT:0 "§Yトリエント公会議§!の始まり\n"
  DISABLE_COUNCIL_OF_TRENT:0 "§Yトリエント公会議§!の終わり\n"
- HAVE_LESS_OWNED_AREAS_THAN:0 "Have less areas than $VALUE|Y$"
- HAVE_MORE_OWNED_AREAS_THAN:0 "Number of areas at least $VALUE|Y$"
+ HAVE_LESS_OWNED_AREAS_THAN:0 "地域が$VALUE|Y$未満である"
+ HAVE_MORE_OWNED_AREAS_THAN:0 "地域の数が$VALUE|Y$以上である"
  HAS_NOT_FEATURE_ALLOWING:1 "Do NOT have feature allowing '$WHICH$'.\n"
  HAS_FEATURE_ALLOWING:1 "Has feature allowing '$WHICH$'.\n"
  TOTAL_HAS_NOT_MORE_PRIVATEERS:0 "$WHERE|Y$における私掠船が交易力の§Y$VAL$§!未満である。"
@@ -667,5 +667,5 @@
  EFFECT_SUPPORT_INDEPENDENCE:0 "$TAG|Y$は$TARGET|Y$の独立を支援します。"
  TRIGGER_WAS_HUMILIATED_BY:0 "$TAG|Y$は最近$BY|Y$によって屈辱を受けた。"
  TRIGGER_WAS_NOT_HUMILIATED_BY:0 "$TAG|Y$は最近$BY|Y$によって屈辱を受けていない。"
- TRIGGER_IS_HIRING_CONDOTTIERE_FROM:0 "$TAG|Y$ is hiring condottiere from $FROM|Y$."
- TRIGGER_IS_NOT_HIRING_CONDOTTIERE_FROM:0 "$TAG|Y$ is not hiring condottiere from $FROM|Y$."
+ TRIGGER_IS_HIRING_CONDOTTIERE_FROM:0 "$TAG|Y$は$FROM|Y$からコンドッティエーリを借りている。"
+ TRIGGER_IS_NOT_HIRING_CONDOTTIERE_FROM:0 "$TAG|Y$が$FROM|Y$からコンドッティエーリを借りていない。"
