--- a/source/localisation/dharma_l_english.yml
+++ b/source/localisation/dharma_l_english.yml
@@ -148,7 +148,7 @@
  brahmins_estate_events.9.d:0 "バラモンは伝統的にヒンドゥー教の宗教上の権威を独占してきたが、時折、バラモン主義に挑む宗教運動が現れる。この種の運動が、バラモンによる抑圧の努力にもかかわらず、[Root.Country.GetName]中に広まっている。大衆宗教運動の主唱者達は、バラモンは自分の額から聖痕を拭い去って宗教的責任を逃れてきた、それは世俗権力の座を占領し、貧民に不公平を押し付けるためだと主張している。無欲の献身だけが救いへの唯一の道であり、十分に熱心なヒンドゥー教徒ならば誰でも達成できる美徳であると彼らは断言している。\n\n影響力のあるバラモンの集団は、バラモンの権威に対する国民の信頼を回復し、非バラモン宗教運動を抑圧する助けを嘆願するため、[Root.Monarch.GetTitle]に接近している。"
  brahmins_estate_events.9.a:0 "バラモンに正統性の強制を許可する。"
  brahmins_estate_events.9.b:0 "大衆宗教運動を推奨する。"
- non_brahmin_tooltip:1 "A fraction of all owned §YHindu§! provinces, roughly equal to the land share of the §YBrahmins§! estate, get §Y'Brahmin Orthodoxy Enforced'§! for §Y15 years§!, giving the following effects:\nLocal Unrest: §R+5.00§!\nMonthly Autonomy Change: §G-0.05%§!"
+ non_brahmin_tooltip:1 "領有する全ての§Yヒンドゥー教§!の州の一部、§Yバラモン§!階級の土地占有率とほぼ等しい州は、§Y15年§!間、§Y「バラモンの正統性の強制」§!を獲得し、以下の効果を得ます：\n州不穏度：§R+5.00§!\n月自治率変化：§G-0.05%§!"
  brahmins_estate_events.10.t:0 "[brahmin_fort_province.GetName]の要塞で紛争"
  brahmins_estate_events.10.d:0 "[Root.Country.GetName]の王室は、[Root.Monarch.GetTitle]と軍事階級間の紛争に巻き込まれました。緊張が高まっている今、要塞管理の問題が注目されるようになりました。現在、特に争いを好む将軍によって保有される[brahmin_fort_province.GetName]の要塞は、バラモンが自らの影響力を得ている州にあります。\n\n緊張のために突然戦争が勃発する可能性を予見して、この重要な要塞の支配権を争いを好む将軍からバラモンに移すことは賢明かもしれません。攻城技術に関しては軍人より下手ですが、少なくともバラモンは[Root.Monarch.GetTitle]に忠実です。また代案としては、[brahmin_fort_province.GetName]での将軍の特権の保持と引き換えに態度を変えるよう彼を説得することができます。"
  brahmins_estate_events.10.a:0 "バラモンに要塞を渡せ。"
@@ -358,7 +358,7 @@
  marathas_estate_events.8.d:0 "ビトーバー崇拝を中心とする巡礼の伝統は、マラーターの間で人気が高まっています。これらの行列は、インドの多くのマラーター居留地で幅広く同時に行われ、パンダルプールのビトーバーの寺院で最高潮に至る、パルキーとして知られています。パルキーはマラーターの平等主義の伝統の一部を形成しています。階級にかかわらず全てのマラーターは、崇拝されたサント・マット、詩人の聖人の質素なサンダルを持って、並んで歩きます。\n\nバラモンの中には、これらの非階層的な宗教運動が宗教的権威に対する脅威であると見なす者もます。彼らはヴェーダの儀式の解釈に従って正統なヒンドゥー教の礼拝に統合できるように、パルキーを管理する手段を得ようとしています。"
  marathas_estate_events.8.a:0 "パルキーは民衆の手中にあるままとしよう。"
  marathas_estate_events.8.b:0 "バラモンの指針で祭典を正式なものとせよ。"
- palkis.tooltip:1 "A fraction of all owned §YHindu§! provinces, roughly equal to the land share of the §YMaratha§! estate, get §Y'Popular Palkhis'§! for §Y20 years§!, giving the following effects:\nLocal Unrest: §G-3.00§!\nLocal Development Cost: §G-5.0%§!\nMonthly Devastation: §G-0.03§!"
+ palkis.tooltip:1 "領有する全ての§Yヒンドゥー教§!の州の一部、§Yマラーター§!階級の土地占有率とほぼ等しい州は、§Y20年§!間、§Y「大衆のパルキー」§!を獲得し、以下の効果を得ます：\n州不穏度：§G-3.00§!\n州開発コスト：§G-5.0%§!\n月間荒廃度：§G-0.03§!"
  EST_VAL_BRAHMIN_PALKHIS:0 "バラモン主導のパルキー: §Y$VAL$％§!"
  marathas_estate_events.9.t:0 "マラーターの権力の減少"
  marathas_estate_events.9.d:0 "最近、[Root.Country.GetName]内でのマラーターの影響は薄れています。王朝の内紛と分裂は、多くのマラーターの指導者から[Root.Monarch.GetTitle]に対する義務を遠ざけ、従って、彼らは王室でほとんど権力を振るっていません。"
@@ -406,7 +406,7 @@
  CHANGE_REFORM_DESC:3 "政府改革$REFORM|Y$に変更すると、政府改革進捗度が$COST|R$減少し、以下のボーナスが得られます：\n$BENEFITS$"
  CHANGE_REFORM_POTENTIAL:1 "\nこの改革は、あなたが以下の条件を満たしているだけに限って、利用可能なことに注意して下さい：\n$CONDITIONS$"
  NO_MANUAL_CHANGE:0 "この改革を手動で選択することはできません。"
- CHANGE_REFORM_CONFIRM_DESC:2 "Are you sure you want to change to the Government Reform $REFORM|Y$? This will cost $COST|R$ Government Reform Progress and give you the following benefits:\n$BENEFITS$$POTENTIAL$"
+ CHANGE_REFORM_CONFIRM_DESC:2 "政府改革$REFORM|Y$に変更してもよろしいですか？ 変更には$COST|R$の政府改革進捗度が必要で、これにより以下のボーナスが得られます：\n$BENEFITS$$POTENTIAL$"
  VACANT_REFORM_CONFIRM_DESC:0 "政府改革$REFORM|Y$を選択してもよろしいですか？ この選択はコスト不要で、以下のボーナスが得られます：\n$BENEFITS$"
  N_REFORM_UPGRADES_AVAILABLE:0 "制定可能な改革：$UPGRADES|Y$"
  NO_REFORMS_FOR_NATIVES:1 "§R政府改革を制定する前にネイティブ・アメリカン政体を脱却しなければなりません。§!"
@@ -957,12 +957,12 @@
  DOESNT_HAVE_ANY_TRADE_COMPANY_INVESTMENT:0 "$INVESTOR|Y$は、$AREA|Y$におけるいずれの交易会社も保有していない\n"
  HAS_ANY_TRADE_COMPANY_INVESTMENT:0 "$INVESTOR|Y$は、$AREA|Y$における交易会社を保有している\n"
  dutch_republic.33.d2:1 "[Root.GetAdjectiveCap]州議会内での数年間の内ゲバは、[Root.GetName]の国民精神に否定的影響を与え始めました。州議会に反対する世論の高まりから、市民の間で多くの声援を呼び出しました。\n\nまもなく、一人の候補者が彼の敵対者の中心にそびえ立ち、州議会にまだ残るわずかな敵を打倒し、[Root.GetName]の輝かしい伝統を復活させます。"
- brahmins_estate_events.9.b.tt:2 "A fraction of all owned §YHindu§! provinces, roughly equal to the land share of the §YBrahmin§! estate, get §Y'Non-Brahmin Religious Movements'§! for §Y15 years§!, giving the following effects:\nLocal Unrest: §G-5.00§!\nMonthly Autonomy Change: §R+0.05%§!"
+ brahmins_estate_events.9.b.tt:2 "領有する全ての§Yヒンドゥー教§!の州の一部、§Yバラモン§!階級の土地占有率とほぼ等しい州は、§Y15年§!間、§Y「非バラモン宗教運動」§!を獲得し、以下の効果を得ます：\n州不穏度：§G-5.00§!\n月自治率変化：§R+0.05%§!"
  GOV_REVOLUTIONARY_REPUBLIC:0 "革命共和国"
  GOVERNMENT_DESELECTED_TITLE:0 "政府の廃止"
  GOVERNMENT_DESELECTED_DESC:0 "あなたの国の変化により、政府$REFORM|Y$は実行不可能になったため廃止されました。政府は$REPLACEMENT|Y$に変更されます。"
  RAJPUT_DESC:2 "By granting special privileges to the §YRajput§! estate, we gain access to their elite warriors. Rajputs have stronger morale than average troops, are cheaper to reinforce and retain their drill bonuses for a longer period of time."
- CHANGE_REFORM_CANT_AFFORD:0 "You cannot change Government Reform as you don't have $COST|R$."
+ CHANGE_REFORM_CANT_AFFORD:0 "$COST|R$を持っていないため、政府改革を変更できません。"
  REFORM_PROGRESS_DEV:1 "§Y$LOCALAUTONOMY$%§!の平均州自治率から$POINTS|G$\nこの計算式は年間$BASE|+=0$に（§Y100－平均自治率§!）を乗じたものです。\n\n"
  REFORM_PROGRESS_BUILDINGS:0 "\n $POINTS|G$ from Courthouses and Town Halls"
  COMPANY_PRICE_CALC:0 "基本：$BASE|Y0$¤\n自国の植民範囲 §G$RANGE|0$§!¤\n$MIN|0Y$¤以下になることはありません"
