--- a/source/localisation/emperor_l_english.yml
+++ b/source/localisation/emperor_l_english.yml
@@ -42,12 +42,12 @@
  MARINES_FORCELIMIT:0 "以下の要因により、$FL$の扶養限界のうち$VAL|%Y$を§G海兵隊§!として徴集できます：\n"
  JANISSARY_FORCELIMIT:0 "$FL$の扶養限界のうち$VAL|%Y$を§Gイェニチェリ§!として徴集できます。これは異教徒の州からのみ徴集が可能であるためです。\n"
  NO_CURRENT_COUNTRIES_IN_THIS_LIST:0 "現在国家はありません"
- HARSH_INFO_TOOLTIP:0 "評議会で過酷な措置を支持している枢機卿が$VAL|Y$人います。\n過酷な措置の支援は$WHO$に以下の効果を与えます：\n$EFFECT$"
- CONCIL_INFO_TOOLTIP:0 "評議会で和解措置を支持している枢機卿が$VAL|Y$人います。\n和解措置の支援は$WHO$に以下の効果を与えます：\n$EFFECT$"
+ HARSH_INFO_TOOLTIP:0 "公会議で過酷な措置を支持している枢機卿が$VAL|Y$人います。\n過酷な措置の支援は$WHO$に以下の効果を与えます：\n$EFFECT$"
+ CONCIL_INFO_TOOLTIP:0 "公会議で調停的措置を支持している枢機卿が$VAL|Y$人います。\n調停的措置の支援は$WHO$に以下の効果を与えます：\n$EFFECT$"
  COUNCIL_OF_TRENT_EXPLANATION:0 "トリエント公会議は全ての要求が認められるか、数十年が経過するまで続きます。"
- WE_ARE_NEUTRAL_IN_COUNCIL:0 "我々は現在、評議会で中立的な立場にあり、それは以下の効果を与えます：\n$EFFECT$"
+ WE_ARE_NEUTRAL_IN_COUNCIL:0 "我々は現在、公会議で中立的な立場にあり、それは以下の効果を与えます：\n$EFFECT$"
  OTHERS_ARE_NEUTRAL_IN_COUNCIL:0 "評議会で中立的な立場にある国家は、以下の効果を得ます：\n$EFFECT$"
- PAPAL_BULL_NOT_CURIA_CONTROLLER:0 "§RYou are not the Papal Controller. Only the Papal Controller can spend the Curia Coffers to enact a Golden Bull.§!"
+ PAPAL_BULL_NOT_CURIA_CONTROLLER:0 "§Rあなたは教皇の支配者ではありません。教皇の支配者だけが金印勅書を制定するため教皇庁の国庫を使うことができます。§!"
  DISCILINE_FOR_MERC:0 "これらの傭兵は以下の理由により$VAL|+=%2$の規律の増加が与えられます：\n"
  RULER_AS_GENERAL:0 "Ruler as General"
  RULER_AS_GENERAL_DESC:0 "統治者が将軍となる場合は追加のコストはかかりませんが、統治者が戦死するリスクを生じさせます。"
@@ -168,7 +168,7 @@
  ND_SPRITE_PACK:0 "スプライトパック"
  ND_SPRITE_PACK_SELECTED:0 "§Yスプライトパックが選択されています。選択を解除するにはもう一度クリックしてください。§!"
  ND_SPRITE_PACK_UNSELECTED:0 "§Yスプライトパックが選択されていません。クリックしてカスタム国家にそれを選択します。§!"
- ND_UNIT_VIEWER_DESC:1 "Is currently showing $TYPE|Y$ of Tier $LEVEL|Y$."
+ ND_UNIT_VIEWER_DESC:1 "レベル$LEVEL|Y$の$TYPE|Y$を表示しています。"
  ND_UNIT_VIEWER_INTERACTIVE_DESC:2 "§YHold Right Mouse Button§! to rotate sprite§!."
  ND_SPRITE_PACK_DETAIL_LIST_START:0 "このスプライトパックは以下を含みます："
  ND_SPRITE_PACK_DETAIL_LIST_ENTRY:1 "\nレベル$LEVEL|Y$の$TYPE|Y$"
@@ -212,9 +212,9 @@
  COUNCIL_CONCESSION_BTN2:0 "OK"
  COUNCIL_CONCESSION_BTN3:0 "移動"
  COUNCIL_CONCESSION_MAP:0 "$POSITION$"
- IS_NOT_HEGEMON_TRIGGER:0 "Is NOT a hegemon"
- IS_HEGEMON_TRIGGER:0 "Is a Hegemon"
- LOST_HEGEMON_US_TITLE:0 "Hegemony Lost"
+ IS_NOT_HEGEMON_TRIGGER:0 "覇権ではない"
+ IS_HEGEMON_TRIGGER:0 "覇権である"
+ LOST_HEGEMON_US_TITLE:0 "覇権の喪失"
  LOST_HEGEMON_US_SETUP:0 "When we lose our position as a hegemon!"
  LOST_HEGEMON_US_HEADER:0 "宰相からの報告"
  LOST_HEGEMON_US_1:0 "覇権は失われた！"
@@ -225,8 +225,8 @@
  LOST_HEGEMON_US_BTN1:0 "OK"
  LOST_HEGEMON_US_BTN2:0 "OK"
  LOST_HEGEMON_US_BTN3:0 "移動"
- LOST_HEGEMON_US_MAP:0 "$HEGEMONY$ Lost"
- LOST_HEGEMON_THEM_TITLE:0 "Hegemony Lost"
+ LOST_HEGEMON_US_MAP:0 "$HEGEMONY$の喪失"
+ LOST_HEGEMON_THEM_TITLE:0 "覇権の喪失"
  LOST_HEGEMON_THEM_SETUP:0 "When another nation lose their position as a hegemon."
  LOST_HEGEMON_THEM_HEADER:0 "宰相からの報告"
  LOST_HEGEMON_THEM_1:0 ""Hegemony lost!"
@@ -237,7 +237,7 @@
  LOST_HEGEMON_THEM_BTN1:0 "OK"
  LOST_HEGEMON_THEM_BTN2:0 "OK"
  LOST_HEGEMON_THEM_BTN3:0 "移動"
- LOST_HEGEMON_THEM_MAP:0 "$HEGEMONY$ Lost"
+ LOST_HEGEMON_THEM_MAP:0 "$HEGEMONY$の喪失"
  GAIN_HEGEMON_US_TITLE:0 "Hegemony Gained"
  GAIN_HEGEMON_US_SETUP:0 "When you proclaim a Hegemony"
  GAIN_HEGEMON_US_HEADER:0 "宰相からの報告"
@@ -276,8 +276,8 @@
  HEGEMON_ALREADY:0 "You are already a hegemon!"
  OTHER_HEGEMON_ALREADY:0 "There is already a $WHICH|Y$. You need to make sure $WHO|Y$ loses a war, which will make them lose their hegemony."
  WE_ARE_BOTH_HEGEMONS:0 "Hegemons can not ally with other Hegemons"
- DIPLO_HEGEMON:0 "$WHO$ is a Hegemon: "
- is_hegemon:0 "Hegemon"
+ DIPLO_HEGEMON:0 "$WHO$は覇権である："
+ is_hegemon:0 "覇権"
  allied_to_hegemon:0 "Allied to Hegemon"
  SCORE_HEGEMONY:0 "Finally scored is multiplied by $VAL$, as being a Hegemon increases it, while being allied to one decreases it."
  HEGEMON_CURRENTLY_AT:0 "With a current power of $VAL|2%Y$, $WHO$ gains the following effects:\n"
@@ -291,8 +291,8 @@
  HAVE_HEGEMONY_PROGRESS_LESS_THAN:0 "Hegemony Power is less than $VAL|Y%$"
  HAVE_HEGEMONY_PROGRESS_MORE_THAN:0 "Hegemony Power is at least $VAL|Y%$"
  MODIFIER_BLOCKADE_FORCE_REQUIRED:0 "Blockade Force Required"
- MODIFIER_HOSTILE_DISEMBARK_SPEED:1 "Hostile Disembark Time"
- MODIFIER_HOSTILE_FLEET_ATTRITION:0 "Hostile Fleet Attrition"
+ MODIFIER_HOSTILE_DISEMBARK_SPEED:1 "敵軍の下船時間"
+ MODIFIER_HOSTILE_FLEET_ATTRITION:0 "敵軍の艦隊損耗"
  coastal_defence:0 "沿岸防衛"
  naval_battery:0 "沿岸砲台"
  building_coastal_defence:0 "沿岸防衛"
@@ -336,7 +336,7 @@
  expand_administation_modifier:0 "拡大された統治"
  MODIFIER_EXPAND_ADMINISTRATION_COST:0 "統治の拡大コスト"
  EXPAND_ADMINISTRATION:0 "統治の拡大"
- CALC_EXPAND_ADMIN:0 "$VAL|Y$ development will be cheaper in $WHERE$"
+ CALC_EXPAND_ADMIN:0 "$WHERE$においては$VAL|Y$の開発度が安上がりです"
  EXPAND_ADMINISTRATION_CONFIRM_TITLE:0 "統治の拡大"
  EXPAND_ADMINISTRATION_CONFIRM_DESC:0 "以下の効果を得るために$COST|Y$の改革進捗度を費やしますか？：\n$EFFECT$"
  EXPAND_ADMINISTRATION_NOT_ENOUGH_PROGRESS:0 "§R -統治拡大には少なくとも$COST$の改革進捗度が必要です。§!"
@@ -372,10 +372,10 @@
  CURIA_CALL_ECUMENICAL_COUNCIL_NOT_ENOUGH_MONEY:0 "§R公会議を召集するには$COST|Y$¤が必要ですが、あなたは$AVAILABLE|Y$¤しか持っていません。§!"
  CURIA_CALL_ECUMENICAL_COUNCIL_TITLE:0 "公会議を召集"
  CURIA_CALL_ECUMENICAL_COUNCIL_DESC:0 "$COST|Y$¤を使ってトリエント公会議を召集しますか？$TREASURY|Y$¤が教皇庁の国庫に入り、次の教皇の支配者になるため§Y$INFLUENCE$§Wの投資された影響力を獲得します。"
- CURIA_BUY_INDULGENCE:1 "Spend $COST|Y$¤ to buy Indulgence for your sins. $TREASURY|Y$¤ will enrich the Curia coffers, and you will gain $INFLUENCE|G$ yearly Papal Influence for $YEARS|Y$ years. The Pope will appreciate this voluntary offer, and therefore this will increase our relations with him."
+ CURIA_BUY_INDULGENCE:1 "$COST|Y$¤を使ってあなたの罪に対して免罪符を購入します。$TREASURY|Y$¤が教皇庁の国庫に入り、あなたは年間$INFLUENCE|G$の教皇への影響力を$YEARS|Y$年間獲得します。教皇はこの自発的な申し出に感謝し、それゆえ、これは彼と我々の関係を良くするでしょう。"
  CURIA_BUY_INDULGENCE_EXCOMMUNICATED:0 "You are Excommunicated, so the price for your Indulgence is $MULTIPLIER|Y$ times bigger. The Pope, on the other hand, will reward your proof of faith by lifting it and will not try Excommunicate you again for $YEARS|Y$ years."
  CURIA_BUY_INDULGENCE_TITLE:0 "免罪符の購入"
- CURIA_BUY_INDULGENCE_DESC:0 "Do you want to spend $COST|Y$¤ to buy Indulgence for your sins? $TREASURY|Y$¤ will enrich the Curia coffers, and you will gain $INFLUENCE|G$ yearly Papal Influence for $YEARS|Y$ years. The Pope will appreciate this voluntary offer, and therefore this will increase our relations with him."
+ CURIA_BUY_INDULGENCE_DESC:0 "$COST|Y$¤を使ってあなたの罪に対して免罪符を購入しますか？$TREASURY|Y$¤が教皇庁の国庫に入り、あなたは年間$INFLUENCE|G$の教皇への影響力を$YEARS|Y$年間獲得します。教皇はこの自発的な申し出に感謝し、それゆえ、これは彼と我々の関係を良くするでしょう。"
  CURIA_BUY_INDULGENCE_ALREADY_BOUGHT:0 "§Rあなたはすでに罪のために免罪符を購入しており、現時点ではいかなる量の金も教皇の心を変えることはできません。§!"
  CURIA_BUY_INDULGENCE_NOT_ENOUGH_MONEY:0 "§R免罪符の購入には$COST|Y$¤が必要ですが、あなたは$AVAILABLE|Y$¤しか持っていません§!"
  EXCOM_TARGET_BOUGHT_INDULGENCE:0 "§R目標は罪のために免罪符を購入しました、あなたは今彼を破門することはできません。§!"
@@ -399,17 +399,17 @@
  CURIA_APPOINT_CARDINAL_SELF_DESC:1 "Do you want to spend $COST|Y$¤ to Appoint one of your loyalists as Cardinal? This will give us $CORRUPTION|R$ Corruption and increase our Invested influence towards becoming the next Papal Controller by $INFLUENCE|Y$ every year."
  CURIA_GOLDEN_BULL_MECHANIC:0 "$MECHANIC|Y$を有効化"
  CURIA_GOLDEN_BULL_TRIGGER_DESC:0 "§Y必要条件：§!"
- CURIA_PICK_GOLDEN_BULL_NOT_ENOUGH_CASH:0 "§RYou need $REQUIRED|Y$¤ in the Curia Treasury to pick a Golden Bull but you only have $AVAILABLE|Y$¤.§!"
- CURIA_PICK_GOLDEN_BULL_ALREADY_PICKED:0 "§RThere can only be one Golden Bull enacted at a time.§!"
- CURIA_CURRENT_GOLDEN_BULL_PICKED:0 "§YThis Golden Bull has been enacted by the Curia Controller and will remain active for the rest of his life.§!"
+ CURIA_PICK_GOLDEN_BULL_NOT_ENOUGH_CASH:0 "§R金印勅書の選択には$REQUIRED|Y$¤が必要ですが、あなたは$AVAILABLE|Y$¤しか持っていません。§!"
+ CURIA_PICK_GOLDEN_BULL_ALREADY_PICKED:0 "§R一度に制定できる金印勅書は1つだけです。§!"
+ CURIA_CURRENT_GOLDEN_BULL_PICKED:0 "§Yこの金印勅書は教皇の支配者によって制定されており、彼が生きている間は有効なままです。§!"
  libertas_ecclesiae:0 "教会の自由"
  libertas_ecclesiae_DESC:0 "教会の自由は、11世紀に始まった改革運動を導いた、世俗的または一時的な権力からの教会の権威の自由の概念である。\nしかし、神聖ローマ皇帝の人形が聖ペトロの玉座に座っているとしたらどうなる？"
  immensa_aeterni_dei:0 "偉大な永遠の神"
  immensa_aeterni_dei_DESC:0 "Reorganize the Roman Curia, establishing permanent congregations of cardinals to advise the Pope on various subjects."
  cardinals_spread_institution:0 "Cardinals spread institutions"
- CURIA_PICK_GOLDEN_BULL_TITLE:0 "Pick Golden Bull"
+ CURIA_PICK_GOLDEN_BULL_TITLE:0 "金印勅書を選択"
  POPE_ENTRY:0 "$TITLE$ $NAME$"
- CURIA_PICK_GOLDEN_BULL_DESC:2 "Do you want to pick $NAME|Y$?\n\nPicking this Golden Bull will cost $COST|Y$¤ from the §YCuria Treasury§!, and will until the death $POPE|Y$ give the following benefits to all $RELIGION|Y$ countries:\n\n$DESCRIPTION$"
+ CURIA_PICK_GOLDEN_BULL_DESC:2 "$NAME|Y$を選択しますか？\n\nこの金印勅書の選択には§Y教皇資金§!から$COST|Y$¤が必要で、$POPE|Y$が亡くなるまでの間、全ての$RELIGION|Y$国家に以下のボーナスを与えます：\n\n$DESCRIPTION$"
  FORCE_JOIN_HRE_WAR_NAME:0 "$ORDER$$FIRST$・$SECOND$帝国征服戦争"
  cb_force_join_hre:0 "帝国の拡大"
  cb_force_join_hre_desc:0 "それらは帝国の一部であるべきだ！"
@@ -452,8 +452,8 @@
  DECIDE_ON_ESTATE_AGENDA:1 "階級の議題$NAME|Y$を決定"
  HAS_NOT_ESTATE_PRIVILEGE:1 "$PRIVILEGE|Y$の階級特権を与えていない\n"
  HAS_ESTATE_PRIVILEGE:1 "$PRIVILEGE|Y$の階級特権を与えた\n"
- FORCE_CONVERTED_BY:0 "Forced to change religion by $CONVERTED_BY|Y$"
- NOT_FORCE_CONVERTED_BY:0 "Not forced to change religion by $CONVERTED_BY|Y$"
+ FORCE_CONVERTED_BY:0 "$CONVERTED_BY|Y$に改宗を強制された"
+ NOT_FORCE_CONVERTED_BY:0 "$CONVERTED_BY|Y$に改宗を強制されていない"
  CROWN_LAND_SHARE_LESS_THAN:1 "王家が所有している土地が$SHARE|Y$%未満である\n"
  CROWN_LAND_SHARE_AT_LEAST:1 "王家が所有している土地が$SHARE|Y$%以上である\n"
  HAS_ESTATE_LOANS:0 "階級からの借金がある"
@@ -484,7 +484,7 @@
  LIBERTY_DESIRE_FROM_REVOLUTION:0 "革命思想は従属国の開発度の§Y$SPREAD$%§!に広がっています：$VAL$"
  MAPMODE_REVOLUTION:0 "革命"
  MAPMODE_REVOLUTION_DESC:1 "これは革命の広がりと影響を示しています。革命目標は紫色で表示され、他の革命国は緑、黄色から赤は非革命国であり、その州が革命によってどれほどひどく影響を受けているかを示しています。"
- COUNTRY_CAN_EMBRACE_REVOLUTION:0 "We can embrace the Revolution! Aux armes, citoyens!"
+ COUNTRY_CAN_EMBRACE_REVOLUTION:0 "我々は革命を受け入れた！武器を取れ、市民らよ！"
  COUNTRY_CANNOT_EMBRACE_REVOLUTION_IS_REVOLUTIONARY:0 "我々はすでに革命派だ！国王に死を！"
  COUNTRY_CANNOT_EMBRACE_REVOLUTION_MIN_DEV:1 "$COUNTRY|Y$ is too weak to claim the mantle of the Revolution. We need at least $MINDEV|Y$ Development and we only have $DEV|Y$."
  COUNTRY_CANNOT_EMBRACE_REVOLUTION_NO_SPREAD:0 "革命思想は$COUNTRY|Y$ではそれを受容できるほど広く普及していません。§Y$REQUIRED$%§!が必要ですが§Y$SPREAD$%§!しかありません。"
@@ -537,8 +537,8 @@
  COUNTRY_HAS_NOT_REVOLUTIONARY_ZEAL_TRIGGER:0 "革命熱が$VAL|0Y$未満である"
  COUNTRY_HAS_MAX_REVOLUTIONARY_ZEAL_TRIGGER:0 "最大革命熱が$VAL|0Y$以上である"
  COUNTRY_HAS_NOT_MAX_REVOLUTIONARY_ZEAL_TRIGGER:0 "最大革命熱が$VAL|0Y$未満である"
- IS_REVOLUTIONARY:0 "Is revolutionary"
- IS_NOT_REVOLUTIONARY:0 "Is not revolutionary"
+ IS_REVOLUTIONARY:0 "革命国である"
+ IS_NOT_REVOLUTIONARY:0 "革命国ではない"
  REVOLUTION_DISMANTLED_SINCE:0 "少なくとも$YEARS|Y$年前に革命が取り除かれた。"
  REVOLUTION_NOT_DISMANTLED_SINCE:0 "革命がまだ続いているか、取り除かれてから$YEARS|Y$年経っていない。"
  COUNTRY_CLAIM_REVOLUTION:0 "我々は革命目標を請求可能です！"
@@ -625,8 +625,8 @@
  MODIFIER_MAX_ELECTORS:0 "選帝侯の数"
  MODIFIER_MANPOWER_AGAINST_IMPERIAL_ENEMIES:1 "Manpower against Imperial enemies"
  MODIFIER_MONARCH_LIFESPAN:0 "君主の平均寿命"
- IMPERIAL_INCIDENT_STARTED_TITLE:0 "Imperial Incident has begun"
- IMPERIAL_INCIDENT_STARTED_SETUP:0 "When an Incident in the Empire starts."
+ IMPERIAL_INCIDENT_STARTED_TITLE:0 "Imperial Incidentの開始"
+ IMPERIAL_INCIDENT_STARTED_SETUP:0 "帝国における事件が始まる時"
  IMPERIAL_INCIDENT_STARTED_HEADER:0 "$MESSENGER$"
  IMPERIAL_INCIDENT_STARTED_1:0 "帝国における事件の開始"
  IMPERIAL_INCIDENT_STARTED_2:0 "$TEXT$"
@@ -718,10 +718,10 @@
  hre_event.7.a:0 "安心・安全な社会のために。"
  PERPETUAL_DIET_ESTABLISHED:0 "議会を召集する恒久的な場所が確立されるだろう。"
  perpetual_diet:0 "永続的帝国議会"
- desc_perpetual_diet:0 "The Imperial Diet of the Holy Roman Empire is in permanent session in [Root.GetCapitalName]. Hosting envoys from the Imperial Estates along with a large number of foreign dignatories, decisions made here are binding and must be acted upon by the Emperor.\n\n§YIf the city were to come under the control of an enemy of the Empire, that would be a serious blow to the Emperor's Authority.§!\n"
+ desc_perpetual_diet:0 "神聖ローマ帝国の帝国議会は、[Root.GetCapitalName]において永続的な会期に入っている。帝国の階級からの使節団と多数の外国の要人を迎えていることで、ここでの決定は拘束力があり、皇帝によって実行されなければならない。\n\n§Yもしその都市が帝国の敵の支配下に置かれた場合、それは皇帝の権威にとって深刻な打撃となるだろう。§!\n"
  diet_occupied:0 "帝国議会は占領されている"
  desc_diet_occupied:0 "帝国議会はもはや帝国の支配下にないが、それは敵の手に落ちた！"
- STABHIT_FROM_INTERNAL_STRIFE:0 "Ewiger Landfriede is enacted"
+ STABHIT_FROM_INTERNAL_STRIFE:0 "永久ラント平和令が制定される"
  geteilte_macht_emperor_per_prince:0 "Geteilte Macht from Princes"
  geteilte_macht_elector_per_prince:0 "Geteilte Macht from Princes"
  geteilte_macht_province:0 "Geteilte Macht"
@@ -776,9 +776,9 @@
  REVOLUTIONARY_GUARD_DESC:0 "革命衛兵はあなたの軍の精鋭の連隊です。彼らは受けるダメージがより少なく、より素早く訓練できますが、維持費ははるかに高価です。"
  BUILD_SPECIAL_UNIT_TOOLTIP:0 "$CATEGORY$ $TYPE$\n"
  JANISSARY_NAME:0 "$HOME$'s $NUM$$ORDER$ Janissary"
- REVOLUTIONARY_GUARD_NAME:0 "$HOME$'s $NUM$$ORDER$ Guard"
+ REVOLUTIONARY_GUARD_NAME:0 "$HOME$第$NUM$$ORDER$衛兵"
  PRIVILEGE_NO_LONGER_VALID_TITLE:0 "階級特権の変更"
- PRIVILEGE_NO_LONGER_VALID_DESC:0 "Due to changes in your country $ESTATE|Y$ will no longer have the Privilege $PRIVILEGE|Y$$EFFECTS$"
+ PRIVILEGE_NO_LONGER_VALID_DESC:0 "国家の変更により$ESTATE|Y$にはもはや$PRIVILEGE|Y$の特権はありません$EFFECTS$"
  PRIVILEGE_NO_LONGER_VALID_EFFECTS:0 "：\n$EFFECTS|Y$"
  PRIVILEGE_NO_LONGER_VALID_NO_EFFECT:0 ". This has no effect on your country."
  UNLOCK_FIXED_GOV_RANK:0 "政府ランクを変更する機能のロックを解除します。"
@@ -807,8 +807,8 @@
  TRADE_COMPANY_SAME_RELIGION:0 "交易会社になるには、州が異なる宗教グループに属している必要があります。"
  TRADE_COMPANY_MUST_BE_OVERSEAS:0 "Province must be considered overseas from both your capital and your subjects capitals."
  OFFER_LOAN_STEPS:0 "§YShift+Click§! to $DIR$ $WHAT$ with $AMOUNT|Y$"
- OFFER_LOAN_DECREASE_INTEREST:0 "Decrease Interest"
- OFFER_LOAN_INCREASE_INTEREST:0 "Increase Interest"
+ OFFER_LOAN_DECREASE_INTEREST:0 "金利を減らす"
+ OFFER_LOAN_INCREASE_INTEREST:0 "金利を増やす"
  OFFER_LOAN_DECREASE_DURATION:0 "期間を減らす"
  OFFER_LOAN_INCREASE_DURATION:0 "期間を増やす"
  DURATION:0 "期間"
@@ -849,11 +849,11 @@
  HRE_JOIN:0 "神聖ローマ帝国に加盟"
  HRE_NUM_FREE_CITIES:0 "$NUM$の自由都市"
  DISTANCE_TO_TARGET:0 "目標への距離：$VAL|R$"
- first_concession_harsh:0 "Heresy Trials"
- second_concession_harsh:0 "Roman Catechism"
+ first_concession_harsh:0 "異端裁判"
+ second_concession_harsh:0 "ローマの教理問答"
  third_concession_harsh:0 "キリストの兵士"
  fourth_concession_harsh:0 "カトリック神秘主義"
- first_concession_concilatory:0 "Secret Confessions"
+ first_concession_concilatory:0 "秘密告白"
  second_concession_concilatory:0 "非ラテン語の聖書"
  third_concession_concilatory:0 "独身主義の廃止"
  fourth_concession_concilatory:0 "信仰義認"
@@ -912,7 +912,7 @@
  emperor_renovatio_title:0 "帝国の再興"
  emperor_renovatio_desc:0 "帝国内の細分化された国家を一つの帝国に再統合する。"
  REVOLUTION_CLAIM_COOLDOWN:0 "革命目標は最近請求されています。$DATE|Y$に再度請求できます。"
- PICK_GOLDEN_BULL_TOOLTIP:0 "§YPick a Golden Bull§!\n"
+ PICK_GOLDEN_BULL_TOOLTIP:0 "§Y金印勅書の選択§!\n"
  GOLDEN_BULL_COST:0 "$COST|Y2$"
  alert_expiring_agenda_instant:0 "§Y議題がまもなく期限切れになります§!"
  alert_expiring_agenda_delayed:0 "最近の議会で階級と合意した議題はまもなく期限切れになります。$DATE|Y$までにそれを終了する必要があります。"
