--- a/source/localisation/institutions_l_english.yml
+++ b/source/localisation/institutions_l_english.yml
@@ -51,8 +51,8 @@
  SCALED_INSTITUTION_DESC:0 "*がついた効果はその州の開発度に応じて変化し、もし開発度が増えたならば効果も増える。"
  MODIFIERS_AFFECTING_INSTITUTION_SPREAD:0 "$INSTITUTION|Y$の広がりに影響を与えるすべての効果：\n"
  FRIENDLY_NEIGHBOR_OR_COAST_PROVINCE_HAS_EMBRACED:0 "隣接する友好州が§Y封建制§!を受容している"
- tooltip_global_trade_burghers:1 "Adjacent has Global Trade & Loyal Burghers with 30% Land Share Present"
- tooltip_printing_press_clergy:1 "Adjacent has Printing Press & Loyal Clergy with 30% Land Share Present"
+ tooltip_global_trade_burghers:1 "隣接地域に世界交易があり、忠実な市民が30％の土地占有率を持っている"
+ tooltip_printing_press_clergy:1 "隣接地域に世界交易があり、忠実な聖職者が30％の土地占有率を持っている"
  tooltip_any_neighbor_has_embraced_renaissance:0 "隣接する州が§Yルネサンス§!を受容している"
  tooltip_any_neighbor_has_embraced_printing_press:0 "隣接する州が§Y活版印刷§!を受容している"
  tooltip_any_neighbor_has_embraced_colonialism:0 "隣接する州が§Y植民地主義§!を受容している"
